trunk/Archive2/dc/9483315228fbb9/output
main.cpp:19:68: error: no matching function for call to 'foo'
int main(){ std::cout << "main function starting..." << std::endl; foo(b); }
                                                                   ^~~
main.cpp:17:6: note: candidate function not viable: no known conversion from 'const B' to 'A' for 1st argument
void foo(A) { }
     ^
1 error generated.
